<resources>
    <string name="app_name">Picture</string>
    <string name="oleJohanDahlsHus">Bilde av informatikkbygget Ole Johan Dahls Hus</string>
    <string name="act_name_converter">Converter</string>
    <string name="converterPlaceholder">Centimeter</string>
    <string name="calculate_button">Calculate</string>
    <string name="nextActivity_button">Next Activity</string>
    <string name="radioButton_cm">Convert cm to inches</string>
    <string name="radioButton_inch">Convert inches to cm</string>
    <string name ="title_textView_text">Title</string>
    <string name="description_textView_text">Description</string>
    <string name="dialog_editText_description_hint">Enter description</string>
    <string name="dialog_editText_title_hint">Enter Title</string>
    <string name="dialog_button_text">Add</string>
    <string name="dialog_textView_text">Add new element</string>

</resources>
