<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:label="@string/act_name_converter"
        tools:context=".ConverterActivity">

    <Button
            android:text="@string/calculate_button"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:id="@+id/calculateButton"
            app:layout_constraintEnd_toEndOf="@+id/centimeterInput"
            app:layout_constraintStart_toStartOf="@+id/centimeterInput" android:layout_marginTop="63dp"
            app:layout_constraintTop_toBottomOf="@+id/centimeterInput"/>
    <TextView
            android:text=""
            android:gravity="center_horizontal"
            android:layout_width="208dp"
            android:layout_height="75dp"
            android:id="@+id/inchesOutput"
            app:layout_constraintEnd_toEndOf="@+id/calculateButton"
            app:layout_constraintStart_toStartOf="@+id/calculateButton"
            app:layout_constraintHorizontal_bias="0.479" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/calculateButton" android:fontFamily="serif-monospace"
            android:typeface="monospace" android:textAlignment="center" android:textSize="18sp"
            android:textStyle="bold"/>
    <Button
            android:text="@string/nextActivity_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/goToListButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/inchesOutput" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.515"
            app:layout_constraintStart_toStartOf="@+id/inchesOutput"
            app:layout_constraintEnd_toEndOf="@+id/inchesOutput" app:layout_constraintHorizontal_bias="0.428"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/converterPlaceholder"
            android:gravity="center_horizontal"
            android:ems="10"
            android:id="@+id/centimeterInput" android:layout_marginTop="196dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.538"/>

</android.support.constraint.ConstraintLayout>